@@ -18,6 +18,7 @@
 - added `asfile` argument into the `flowstream.add(name, body, [callback], [asfile])` method
 - added `asfiles` argument into the `flowstream.load(components, design, [callback], [asfiles])` method
 - fixed `callback` call after calling of `DEF.onMail()` delegate
+- added a global `DATA` object for fast access to the QueryBuilderDB without creating a DB controller (faster than `DB()`)
 
 ========================
 0.0.83
